更新qq音乐api接口